# TriNetra-Disaster-Ops

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
app/: env.py  grader.py  models.py
frontend/: index.html  script.js
server/: app.py
